--- a/sudoku.css
+++ b/sudoku.css
@@ -3,10 +3,12 @@ body {
     height: 100%;
     width: 100%;
     font-family: "Montserrat", sans-serif;
+    margin: 0;
 }
 
 #board {
     margin: 50px 25px 25px 25px;
+    display: none;
 }
 
 body {
@@ -88,7 +90,14 @@ td {
     height: 0;
 }
 
-@media screen and (max-width: 700px) {
+#yes-new-game,
+#no-new-game,
+#yes-solve,
+#no-solve {
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 600px) {
     td {
         border: 1px solid black;
         text-align: center;
@@ -97,8 +106,68 @@ td {
     }
 
     .box {
-        width: 25px;
-        height: 25px;
+        max-width: 8vw;
+        height: 8vw;
+        max-height: 8vw;
+        min-height: 8vw;
         transition: 0.1s ease-in all;
     }
+
+    .loader-container {
+        max-width: calc(8vw * 9);
+        height: calc(8vw * 9);
+        min-height: calc(8vw * 9);
+        max-height: calc(8vw * 9);
+    }
+
+    .loader-circle {
+        min-height: 20vw;
+        max-height: 20vw;
+        min-width: 20vw;
+        max-width: 20vw;
+    }
+}
+
+.loader-container {
+    margin: 60px 25px 25px 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 486px;
+    width: 486px;
+}
+
+.loader-circle {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid rgb(149, 195, 248);
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 1s linear infinite; /* Safari */
+    animation: spin 1s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#dion-olympia {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(149, 195, 248);
 }
